--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+# Processing properties
+processing.path=processing
