Add image classification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.sql.init.mode=always
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 # Processing properties
-processing.path=processing
+processing.path=public
+processing.model=models/tensorflow_inception_graph.pb
+processing.groups=models/tensorflow_inception_graph.groups
