--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.tensorflow</groupId>
+			<artifactId>tensorflow</artifactId>
+			<version>1.1.0-rc2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
